Efmub-Ogy/src/objects/CWFormatValidation__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>Allows the end user to specify valid formats (as regular expressions) for fields in objects.</description>
    <fields>
        <fullName>Error_Message__c</fullName>
        <description>The error message to be displayed if the field in not formatted correctly.</description>
        <inlineHelpText>The error message to be displayed if the field in not formatted correctly.</inlineHelpText>
        <label>Error Message</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field_Name__c</fullName>
        <description>The API name of the field to be validated.</description>
        <inlineHelpText>The API name of the field to be validated.</inlineHelpText>
        <label>Field Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Object_Name__c</fullName>
        <description>The API name of the sObject that contains the field of interest.</description>
        <inlineHelpText>The API name of the sObject that contains the field of interest.</inlineHelpText>
        <label>Object Name</label>
        <length>40</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Regular_Expression__c</fullName>
        <description>The regular expression used to validate the field format.  For help with regular expressions, see http://docs.oracle.com/javase/7/docs/api/java/util/regex/Pattern.html</description>
        <inlineHelpText>The regular expression used to validate the field format.  For help with regular expressions, see http://docs.oracle.com/javase/7/docs/api/java/util/regex/Pattern.html</inlineHelpText>
        <label>Regular Expression</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>CWFormatValidation</label>
</CustomObject>